--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,10 @@ video {
   display: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -1215,6 +1219,10 @@ video {
   color: rgb(156 163 175 / var(--tw-placeholder-opacity, 1));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .shadow-\[0_0_60px_15px_rgba\(34\2c 197\2c 94\2c 0\.5\)\] {
   --tw-shadow: 0 0 60px 15px rgba(34,197,94,0.5);
   --tw-shadow-colored: 0 0 60px 15px var(--tw-shadow-color);
@@ -1312,6 +1320,10 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .hover\:-translate-y-2:hover {
